--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- bootsnav -->
     <link rel="stylesheet" href="assets/css/bootsnav.css" >
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css"
+      rel="stylesheet"
+      />
     <!--style.css-->
     <link rel="stylesheet" href="assets/css/style.css">
     <!--responsive.css-->
@@ -238,93 +242,35 @@
     <!--about end -->
     <!--education start -->
     <section id="education" class="education">
-      <div class="section-heading text-center">
-        <h2>education</h2>
-      </div>
-      <div class="container">
-        <div class="education-horizontal-timeline">
-          <div class="row">
-            <div class="col-sm-4">
-              <div class="single-horizontal-timeline">
-                <div class="experience-time">
-                  <h2>2008 - 2010</h2>
-                  <h3>master <span>of </span> computer science</h3>
-                </div>
-                <!--/.experience-time-->
-                <div class="timeline-horizontal-border">
-                  <i class="fa fa-circle" aria-hidden="true"></i>
-                  <span class="single-timeline-horizontal"></span>
-                </div>
-                <div class="timeline">
-                  <div class="timeline-content">
-                    <h4 class="title">
-                      university of north carolina
-                    </h4>
-                    <h5>north carolina, USA</h5>
-                    <p class="description">
-                      Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident.
-                    </p>
-                  </div>
-                  <!--/.timeline-content-->
-                </div>
-                <!--/.timeline-->
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="single-horizontal-timeline">
-                <div class="experience-time">
-                  <h2>2004 - 2008</h2>
-                  <h3>bachelor <span>of </span> computer science</h3>
-                </div>
-                <!--/.experience-time-->
-                <div class="timeline-horizontal-border">
-                  <i class="fa fa-circle" aria-hidden="true"></i>
-                  <span class="single-timeline-horizontal"></span>
-                </div>
-                <div class="timeline">
-                  <div class="timeline-content">
-                    <h4 class="title">
-                      university of north carolina
-                    </h4>
-                    <h5>north carolina, USA</h5>
-                    <p class="description">
-                      Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident.
-                    </p>
-                  </div>
-                  <!--/.timeline-content-->
-                </div>
-                <!--/.timeline-->
-              </div>
-            </div>
-            <div class="col-sm-4">
-              <div class="single-horizontal-timeline">
-                <div class="experience-time">
-                  <h2>2004 - 2008</h2>
-                  <h3>bachelor <span>of </span> creative design</h3>
-                </div>
-                <!--/.experience-time-->
-                <div class="timeline-horizontal-border">
-                  <i class="fa fa-circle" aria-hidden="true"></i>
-                  <span class="single-timeline-horizontal spacial-horizontal-line
-                    "></span>
-                </div>
-                <div class="timeline">
-                  <div class="timeline-content">
-                    <h4 class="title">
-                      university of bolton
-                    </h4>
-                    <h5>bolton, united kingdome</h5>
-                    <p class="description">
-                      Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident.
-                    </p>
-                  </div>
-                  <!--/.timeline-content-->
-                </div>
-                <!--/.timeline-->
-              </div>
-            </div>
-          </div>
+      <div class="container py-5">
+     <div class="section-heading text-center">
+          <h2>education</h2>
         </div>
+        <div class="row">
+          <div class="col-md-12">
+            <!-- <div class="card">
+              <div class="card-body">
+                <h6 class="card-title">education</h6> -->
+                <div id="content">
+                  <ul class="timeline-1 text-black">
+                    <li class="event" data-date="aug 2015 - may 2019">
+                      <h3 class="mb-3">master <span>of </span> computer science</h3>
+                    </li>
+                    <li class="event" data-date="aug 2012 - may 2015">
+                      <h3>university of florida - computer engineering</h3>
+                    </li>
+                    <li class="event" data-date="sept 2012 - dec 2012">
+                      <h3>general assembly - ux design immersive</h3>
+                    </li>
+                    <li class="event" data-date="april 2011 - june 2011">
+                      <h3>google ux certificate</h3>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            <!-- </div>
+          </div>
+        </div> -->
       </div>
     </section>
     <!--/.education-->
@@ -884,6 +830,10 @@
     <!--owl.carousel.js-->
     <script src="assets/js/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"
+      ></script>
     <!--Custom JS-->
     <script src="assets/js/custom.js"></script>
   </body>
