--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
     <!--animate.css-->
     <link rel="stylesheet" href="assets/css/animate.css">
     <!--owl.carousel.css-->
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+    crossorigin="anonymous" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+    crossorigin="anonymous" />
     <!--bootstrap.min.css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- bootsnav -->
@@ -620,43 +624,43 @@
             <div class="owl-carousel owl-theme" id="client">
               <div class="item">
                 <a href="#">
-                <img src="assets/images/clients/c1.png" alt="brand-image" />
+                <img src="./assets/images/clients/c1.png" alt="brand-image" />
                 </a>
               </div>
               <!--/.item-->
               <div class="item">
                 <a href="#">
-                <img src="assets/images/clients/c2.png" alt="brand-image" />
+                <img src="./assets/images/clients/c2.png" alt="brand-image" />
                 </a>
               </div>
               <!--/.item-->
               <div class="item">
                 <a href="#">
-                <img src="assets/images/clients/c3.png" alt="brand-image" />
+                <img src="./assets/images/clients/c3.png" alt="brand-image" />
                 </a>
               </div>
               <!--/.item-->
               <div class="item">
                 <a href="#">
-                <img src="assets/images/clients/c4.png" alt="brand-image" />
+                <img src="./assets/images/clients/c4.png" alt="brand-image" />
                 </a>
               </div>
               <!--/.item-->
               <div class="item">
                 <a href="#">
-                <img src="assets/images/clients/c5.png" alt="brand-image" />
+                <img src="./assets/images/clients/c5.png" alt="brand-image" />
                 </a>
               </div>
               <!--/.item-->
               <div class="item">
                 <a href="#">
-                <img src="assets/images/clients/c6.png" alt="brand-image" />
+                <img src="./assets/images/clients/c6.png" alt="brand-image" />
                 </a>
               </div>
               <!--/.item-->
               <div class="item">
                 <a href="#">
-                <img src="assets/images/clients/c7.png" alt="brand-image" />
+                <img src="./assets/images/clients/c7.png" alt="brand-image" />
                 </a>
               </div>
               <!--/.item-->
@@ -742,21 +746,21 @@
               <div class="single-contact-box">
                 <div class="contact-adress">
                   <div class="contact-add-head">
-                    <h3>jolie star</h3>
-                    <p>uI/uX designer</p>
+                    <h3>lindsey k</h3>
+                    <p>frontend developer</p>
                   </div>
                   <div class="contact-add-info">
                     <div class="single-contact-add-info">
                       <h3>phone</h3>
-                      <p>987-123-6547</p>
+                      <p>850.737.5474</p>
                     </div>
                     <div class="single-contact-add-info">
                       <h3>email</h3>
-                      <p>jolie@info.com</p>
+                      <p>lindseykdev@gmail.com</p>
                     </div>
                     <div class="single-contact-add-info">
                       <h3>website</h3>
-                      <p>www.itsjolie.dev</p>
+                      <p>www.lindseyk.dev</p>
                     </div>
                   </div>
                 </div>
@@ -795,7 +799,7 @@
       <div class="container">
         <div class="hm-footer-copyright text-center">
           <p>
-            &copy; copyright yourname. design and developed by <a href="https://www.themesine.com/">themesine</a>
+            &copy; copyright lindseykdev. design and <i class="fa-solid fa-code" style="color:red;"></i> by <a href="https://www.lindseyk.dev/">lindsey</a>
           </p>
           <!--/p-->
         </div>
@@ -828,7 +832,34 @@
     <script src="assets/js/jquery.appear.js"></script>
     <!-- for progress bar end -->
     <!--owl.carousel.js-->
-    <script src="assets/js/owl.carousel.min.js"></script>
+    <!--Jquery -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
+<!-- Owl Carousel -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<!-- custom JS code after importing jquery and owl -->
+<script type="text/javascript">
+    $(document).ready(function () {
+        $(".owl-carousel").owlCarousel();
+    });
+
+    $('.owl-carousel').owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: true,
+        responsive: {
+            0: {
+                items: 1
+            },
+            600: {
+                items: 3
+            },
+            1000: {
+                items: 5
+            }
+        }
+    })
+</script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script
       type="text/javascript"
